<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_activity_label"
        android:textAlignment="center"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btnPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openPhotoActivity"
        android:text="@string/photo_button"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btnEmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openEMICalculatorActivity"
        android:text="@string/emi_calculator_button"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btnAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openAddressBookActivity"
        android:text="@string/address_book_button"
        android:textSize="15pt" />

</LinearLayout>